src/App.css
/* ... */
@media (max-width: 1080px) {
    .modal_content {
        width: 70vw;
    }

    .modal_content h2 {
        font-size: 2rem;
    }

    .Location,
    .Astronomy {
        margin-bottom: 5vh;
        width: 100%;
    }

    .AirQuality .index_levels {
        flex-direction: row;
        justify-content: space-evenly;
        flex-wrap: wrap;
        min-height: 500px;
    }

    .AirQuality .index_box {
        align-items: center;
        display: flex;
        justify-content: flex-start;
    }

    .AirQuality .item_wrapper {
        justify-content: center;
        width: 60px;
    }

    .About .title {
        font-size: 5rem;
    }

}



@media (max-width: 980px) {
    .header {
        background-size: cover;
        background-position: center;
    }

    .header_70 {
        height: 85vh;
    }

    .navbar {
        height: 15vh;
    }

    .nav_link_item {
        padding: 0 5px;
    }

    .nav_link_item.about {
        margin: 0;
    }

    .About .title_wrapper {
        height: 85vh;
    }

    .container {
        padding: 0 10px;
    }

    .Modal {
        top: 15vh;
    }

    .modal_content {
        margin: 10vh auto 0;
        /*width: 80vw;*/
    }

    .modal_text h1 {
        font-size: 1.6rem;
    }

    .modal_text h2.location,
    .modal_text h2.wait {
        font-size: 1.4rem;
    }

    form {
        width: 85%;
    }

    .MainHeader .title,
    .AirQuality .title,
    .Location .title,
    .Astronomy .title {
        font-size: 1.8rem;
        letter-spacing: 0.1rem;
        word-spacing: 0.1rem;
    }

    .awssld {
        height: 100%;
    }

    .awssld__container {
        height: 80% !important;
    }

    .MainHeader .title {
        font-size: 1.6rem;
        margin: 30px 20px 10px;
    }

    .WeatherCurrent .card_top_header {
        margin: 0;
    }

    .WeatherCurrent .card_top_main h1 {
        font-size: 1.6rem;
    }

    .WeatherCurrent .card_top_main h3 {
        font-size: 1.4rem;
        margin-bottom: 30px;
    }

    .AirQuality .title,
    .Location .title,
    .Astronomy .title {
        margin: 45px;
    }

    .WeatherCurrent span,
    .ForecastDailyInfo span,
    .AirQuality span,
    .Location span,
    .Astronomy span,
    .WeatherCurrent .bottom_content,
    .ForecastDailyInfo .bottom_content {
        text-align: left;
    }

    .WeatherCurrent .bottom_content {
        display: block;
    }

    .ForecastDailyInfo .bottom_content {
        flex-wrap: wrap;
        line-height: 1.2;
    }

    .WeatherCurrent .bottom_left,
    .WeatherCurrent .bottom_right {
        margin: 0 auto;
        width: 90%;
    }

    .Forecast_wrapper {
        height: 100vh;
        width: 90% !important;
    }

    .ForecastDailyInfo_wrapper h2.daily_summary {
        margin: 30px;
    }

    .ForecastDailyInfo .bottom_content {
        margin: 0 auto;
        width: 75%;
    }

    .ForecastDailyInfo .bottom_left,
    .ForecastDailyInfo .bottom_right {
        width: 100%;
    }

    .ForecastHourlyInfo_wrapper h2 {
        margin: 40px;
    }

    .ForecastHourlyInfo .sub_title {
        margin-bottom: 15px;
    }

    .WeatherCurrent.card,
    .Forecast_wrapper.card,
    .AirQuality.card,
    .Location.card,
    .Astronomy.card {
        margin-left: auto;
        margin-right: auto;
        width: 90%;
    }

    .AirQuality .main,
    .AirQuality .index_wrapper {
        width: 80%;
    }

    .AirQuality .index_levels {
        flex-direction: row;
    }

    .AirQuality .item_wrapper {
        width: 50px;
    }

    .Location .main,
    .Astronomy .main  {
        width: 70%;
    }

    .alert {
        margin: 0 auto;
        min-width: 80%;
    }

    .About .welcome {
        top: 15vh;
    }

    .About .title {
        font-size: 2.6rem;
    }

    .About .list_wrapper {
        width: 100%;
    }

    .About ul li {
        font-size: 1rem;
        padding: 20px 10px;
    }

    .About h2 {
        font-size: 1.4rem;
        margin: 10px;
        padding: 0 10px;
    }

    .About .about_react p,
    .About .source p {
        font-size: 1rem;
    }

    .BackToSearch,
    .ScrollToTop {
        padding: 10px;
    }

    .header_404 {
        background-size: cover;
        height: 50vh;
    }

    .PageNotFound404 {
        min-height: 50vh;
        position: relative;
        top: 0;
    }

    .PageNotFound404_wrapper {
        padding: 5px 0;
    }

    .PageNotFound404 .title_wrapper {
        left: 0;
        margin: 3vh;
        position: relative;
        top: 50%;
    }

    .PageNotFound404 .title h1 {
        font-size: 4rem;
        letter-spacing: 1rem;
    }

    .PageNotFound404 .title h2 {
        font-size: 2rem;
        letter-spacing: 0.1rem;
        margin-top: -30px;
    }

    .PageNotFound404 .text {
        margin: 8vh;
    }

    .PageNotFound404 .text h2 {
        font-size: 1.6rem;
        font-weight: normal;
    }

    .PageNotFound404 .text p {
        font-size: 1.6rem;
        letter-spacing: 0;
        padding: 3vh 0;
    }
    .home_wrapper {
        margin: 10vh 10vh 15vh;
    }

}



@media (max-width: 790px) {
    .awssld__prev ,
    .awssld__next {
        top: 0 !important;
    }

}



@media (max-width: 760px) {
    .dot_slide_wrapper {
        margin-top: 25px;
    }

    .ForecastDailyInfo .bottom_content {
        width: 70%;
    }

}



@media (max-width: 480px) {
    .AirQuality .main {
        margin: 0 0 50px;
        width: 90%;
    }

    .AirQuality .box {
        height: 70px;
    }

    .AirQuality .index_wrapper {
        width: 90%;
    }

    .Location .main,
    .Astronomy .main {
        width: 80%;
    }

}

